--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 	compileSdkVersion 28
 	buildToolsVersion '28.0.3'
 	defaultConfig {
-		applicationId 'mgks.kotlin.webview'
+		applicationId 'mgks.os.webview'
 		minSdkVersion 19
 		targetSdkVersion 28
 		versionCode 1
