--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="mgks.kotlin.webview"
+    package="mgks.os.webview"
     android:installLocation="auto">
 
     <supports-screens
@@ -46,7 +46,7 @@
 		android:hardwareAccelerated="true"
         tools:ignore="AllowBackup">
         <activity
-            android:name=".SplashScreen"
+            android:name="mgks.os.webview.SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -55,7 +55,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="mgks.os.webview.MainActivity"
             android:screenOrientation="portrait" > <!-- remove or alter as your apps requirement -->
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
