--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
 android {
-	compileSdkVersion 28
-	buildToolsVersion '28.0.3'
+	compileSdkVersion 29
+	buildToolsVersion '29.0.0 rc1'
 	defaultConfig {
 		applicationId 'mgks.os.webview'
-		minSdkVersion 19
-		targetSdkVersion 28
+		minSdkVersion 21
+		targetSdkVersion 29
 		versionCode 3
 		versionName '3.5'
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,16 +31,27 @@ android {
 
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
-	androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-		exclude group: 'com.android.support', module: 'support-annotations'
-	})
-	//noinspection GradleCompatible
-	implementation 'com.android.support:appcompat-v7:28.0.0'
-	testImplementation 'junit:junit:4.12'
-	implementation 'com.google.android.gms:play-services-auth:16.0.1'
-	implementation 'com.google.android.gms:play-services-location:16.0.0'
+	implementation fileTree(include: ['*.jar'], dir: 'libs')
+	implementation 'com.google.firebase:firebase-core:17.0.1'
+	implementation 'com.google.firebase:firebase-config:18.0.0'
+	implementation 'com.google.firebase:firebase-appindexing:19.0.0'
+	implementation 'com.google.firebase:firebase-messaging:19.0.1'
+	implementation 'com.google.firebase:firebase-ads:18.1.1'
+
+	testImplementation 'junit:junit:4.13-beta-3'
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+
+	implementation 'com.google.android.material:material:1.1.0-alpha08'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+	implementation 'androidx.browser:browser:1.0.0'
+
+	implementation 'com.google.android.gms:play-services-auth:17.0.0'
+	implementation 'com.google.android.gms:play-services-location:17.0.0'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+apply plugin: 'com.google.gms.google-services'
 repositories {
 	mavenCentral()
 }
