--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android'
 
 android {
-	compileSdkVersion 29
-	buildToolsVersion '29.0.0 rc1'
+	compileSdkVersion 31
+	buildToolsVersion '31.0.0'
 	defaultConfig {
 		applicationId 'mgks.os.webview'
 		minSdkVersion 21
-		targetSdkVersion 29
-		versionCode 3
-		versionName '3.5'
+		targetSdkVersion 31
+		versionCode 4
+		versionName '4'
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 		multiDexEnabled true
 	}
@@ -32,23 +32,23 @@ android {
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
-	implementation 'com.google.firebase:firebase-core:17.0.1'
-	implementation 'com.google.firebase:firebase-config:18.0.0'
-	implementation 'com.google.firebase:firebase-appindexing:19.0.0'
-	implementation 'com.google.firebase:firebase-messaging:19.0.1'
-	implementation 'com.google.firebase:firebase-ads:18.1.1'
+	implementation 'com.google.firebase:firebase-core:19.0.1'
+	implementation 'com.google.firebase:firebase-config:21.0.1'
+	implementation 'com.google.firebase:firebase-appindexing:20.0.0'
+	implementation 'com.google.firebase:firebase-messaging:22.0.0'
+	implementation 'com.google.firebase:firebase-ads:20.4.0'
 
-	testImplementation 'junit:junit:4.13-beta-3'
-	androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+	testImplementation 'junit:junit:4.13.2'
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha01'
 
-	implementation 'com.google.android.material:material:1.1.0-alpha08'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-	implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-	implementation 'androidx.browser:browser:1.0.0'
+	implementation 'com.google.android.material:material:1.5.0-alpha03'
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+	implementation 'androidx.appcompat:appcompat:1.4.0-alpha03'
+	implementation 'androidx.browser:browser:1.3.0'
 
-	implementation 'com.google.android.gms:play-services-auth:17.0.0'
-	implementation 'com.google.android.gms:play-services-location:17.0.0'
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation 'com.google.android.gms:play-services-auth:19.2.0'
+	implementation 'com.google.android.gms:play-services-location:18.0.0'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.32"
 }
 
 apply plugin: 'com.google.gms.google-services'
